<resources>
    <string name="app_name">Weaths Up</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_management">Manage Locations</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="title_activity_main">MainActivity</string>


    <string name="title_activity_setting">SettingActivity</string>
    <string name="CityName">CityName</string>
    <string name="Hourly">HOURLY</string>
    <string name="Daily">DAILY</string>
    <string name="Icon">COND</string>
    <string name="Time">TIME</string>
    <string name="Date">DAY</string>
    <string name="Weather">Weather</string>
    <string name="Temperature">TEMP</string>
    <string name="high_temp">HIGH TEMP</string>
    <string name="low_temp">LOW TEMP</string>
    <string name="TemperatureMin">TemperatureMin</string>
    <string name="TemperatureMax">TemperatureMax</string>
    <string name="Feels_Like">Feels Like</string>
    <string name="See_More">48 Hours..</string>
    <string name="Search">search</string>
    <string name="search_hint">City Name</string>
    <string name="Wind">Wind</string>
    <string name="Humidity">Humidity</string>
    <string name="DewPoint">Dew Point</string>
    <string name="Pressure">Pressure</string>
    <string name="Visibility">Visibility</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="switch_temp_def">Units of Temp (Fahrenheit / Centigrade) </string>
    <string name="switch_temp_on">C</string>
    <string name="switch_temp_off">F</string>
    <string name="switch_time_def">Time Format (12 Hour / 24 Hour) </string>
    <string name="switch_time_on">24H</string>
    <string name="switch_time_off">12H</string>
    <string name="submit">Submit</string>
    <string name="inverse">Inverse</string>
    <string name="select_all">Select All</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_loc_manage">LocManageActivity</string>
    <string name="contact_developer">Contact APP Developer</string>
    <string name="contact_designer">Contact Icon Designer</string>
    <string name="github">GitHub</string>
    <string name="email">Email</string>
    <string name="LinkedIn">LinkedIn</string>
    <string name="Website">Personal Website</string>
    <string name="Delete">Delete</string>
    <string name="about">About</string>
</resources>
