<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="zane.weaths_up.SettingActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/lightblue"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_temp_def"
        android:textOn="@string/switch_temp_on"
        android:textOff="@string/switch_temp_off"
        android:textSize="@dimen/Title_Text_Size"
        android:showText="true"
        android:id="@+id/temp_switch"
        android:layout_marginTop="147dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_time_def"
        android:textOn="@string/switch_time_on"
        android:textOff="@string/switch_time_off"
        android:textSize="@dimen/Title_Text_Size"
        android:showText="true"
        android:id="@+id/time_switch"
        android:layout_marginTop="83dp"
        android:layout_below="@+id/temp_switch"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/temp_switch" />

</RelativeLayout>
