<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:text="@string/Date"
        android:id="@+id/Date"
        android:gravity="center"
        android:textSize="@dimen/Medium_Text_Size"/>

    <ImageView
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:id="@+id/Icon"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:id="@+id/TemperatureMin"
        android:text="@string/TemperatureMin"
        android:gravity="center"
        android:textSize="@dimen/Medium_Text_Size"/>

    <TextView
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:id="@+id/TemperatureMax"
        android:text="@string/TemperatureMax"
        android:gravity="center"
        android:textSize="@dimen/Medium_Text_Size"/>
</LinearLayout>

