<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="zane.weaths_up.AboutActivity">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/lightred"
        app:popupTheme="@style/AppTheme.NoActionBar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/lightyellow">
            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:src="@drawable/zane_icon"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:id="@+id/logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/app_name_text"
                android:text="@string/app_name"
                android:textStyle="italic"
                android:textSize="@dimen/Main_Title_Text_Size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:id="@+id/app_description"
                android:text="Description"
                android:lineSpacingExtra="3dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="@dimen/Secondary_Text_Size"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/contact_developer"
                android:textSize="@dimen/Title_Text_Size"
                android:background="@color/lightred"
                android:textColor="@color/white"
                android:textStyle="bold|italic"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="25dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/Medium_Text_Size"
                android:text="@string/email"
                android:drawableStart="@drawable/gmail_icon"
                android:id="@+id/gmail_addr"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="25dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/Medium_Text_Size"
                android:text="@string/github"
                android:drawableStart="@drawable/github_icon"
                android:id="@+id/github_addr"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="25dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/Medium_Text_Size"
                android:text="@string/LinkedIn"
                android:drawableStart="@drawable/linkedin_icon"
                android:id="@+id/linkedin_addr"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/contact_designer"
                android:textSize="@dimen/Title_Text_Size"
                android:background="@color/lightred"
                android:textColor="@color/white"
                android:textStyle="bold|italic"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="25dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/Medium_Text_Size"
                android:drawableStart="@drawable/website_icon"
                android:text="@string/Website"
                android:id="@+id/website_addr"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
