<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="zane.weaths_up.SettingActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/toolbar_layout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_layout"
        android:id="@+id/scrollView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/main_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="320dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CityName"
                android:id="@+id/CityName"
                android:textSize="@dimen/Title_Text_Size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Temperature"
                android:id="@+id/Temperature"
                android:textSize="@dimen/Title_Text_Size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Weather"
                android:id="@+id/Weather"
                android:textSize="@dimen/Medium_Text_Size"/>
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/WeatherIcon"/>
        </LinearLayout>

        <GridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:stretchMode="columnWidth"
            android:numColumns="2"
            android:id="@+id/current_data"
            android:horizontalSpacing="30dp"
            android:verticalSpacing="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp">
        </GridView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_bg"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/Hourly"
                android:textSize="@dimen/Title_Text_Size"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/Date"
                    android:gravity="center"
                    android:textSize="@dimen/Medium_Text_Size"/>

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:text="@string/Icon"/>

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/Weather"
                    android:gravity="center"
                    android:textSize="@dimen/Medium_Text_Size" />

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/Temperature"
                    android:gravity="center"
                    android:textSize="@dimen/Medium_Text_Size"/>
            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:id="@+id/hourly_data">
            </ListView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_bg"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/Daily"
                android:textSize="@dimen/Title_Text_Size"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/Date"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Medium_Text_Size"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.7"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/Icon"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/Weather"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Medium_Text_Size" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/Temperature"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/Medium_Text_Size"/>
            </LinearLayout>

            <ListView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/daily_data">
            </ListView>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</RelativeLayout>
